# EvalLMbyAC

./: README.md  executor.py  logging.conf  logging_custom_handler.py  parse_logs.py  perplexity.py  print_diff_hl.py  pyproject.toml  result.py  test_for_LLMA.py  test_for_TunedPyAe.py
cache/: cache.py
config/: exp_dev.yaml  exp_dev_l4.yaml  exp_test.yaml
gptzip/: gptzip.py  helpers.py  utils.py
test/: cache_test.py  test_perplexity.py
