[project]
name = "gptzip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.2.0",
    "diskcache>=5.6.3",
    "fugashi>=1.4.0",
    "joblib>=1.4.2",
    "optimum-quanto>=0.2.6",
    "protobuf>=5.29.0",
    "quanto>=0.2.0",
    "scalene>=1.5.49",
    "torch>=2.5.1",
    "transformers>=4.46.3",
    "unidic-lite>=1.0.8",
]
